# ggsql-python-rest

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/plans/: 2026-02-09-cleanup-and-polish.md  2026-02-09-hardening-and-consistency.md
src/ggsql_rest/: __init__.py  __main__.py  _app.py  _config.py  _connections.py  _errors.py  _models.py  _query.py  _schema.py  _sessions.py  _snowflake.py
src/ggsql_rest/_routes/: _dependencies.py  _query.py  _schema.py  _sessions.py
tests/: test_api_surface.py  test_app.py  test_config.py  test_connections.py  test_integration.py  test_models.py  test_query.py  test_routes_query.py  test_routes_schema.py  test_routes_sessions.py  test_routes_snowflake.py  test_routes_upload.py  test_schema.py  test_sessions.py  test_snowflake.py
