[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ggsql-rest"
version = "0.1.0"
description = "REST API server for ggsql with SQLAlchemy backend support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "ggsql",
    "sqlalchemy>=2.0",
    "polars>=1.0",
    "python-multipart>=0.0.6",
]

[tool.uv.sources]
ggsql = { git = "https://github.com/posit-dev/ggsql", branch = "main", subdirectory = "ggsql-python" }

[tool.hatch.build.targets.wheel]
packages = ["src/ggsql_rest"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "anyio>=4.0",
    "ruff>=0.1",
]
