[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ggsql-rest"
dynamic = ["version"]
description = "REST API server for ggsql with SQLAlchemy backend support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "ggsql",
    "sqlalchemy>=2.0",
    "polars>=1.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.3",
]

[project.scripts]
ggsql-rest = "ggsql_rest.__main__:main"

[project.optional-dependencies]
snowflake = [
    "snowflake-connector-python>=3.0",
    "snowflake-sqlalchemy>=1.6",
    "posit-sdk>=0.8",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ggsql_rest/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ggsql_rest"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1",
    "pytest>=9.0.2",
    "anyio>=4.0",
    "ruff>=0.1",
]
